# tensority

./: .gitignore  .merlin  README.md  _oasis  _tags  myocamlbuild.ml  opam  tensority.opam  tensority_ppx.opam
examples/: .merlin  dune  linalg.ml  ma.ml  readme_example.ml
lib/: dune  mask.ml  mask.mli  misc.ml  misc.mli  multidim_array.ml  multidim_array.mli  nat.ml  nat.mli  nat_defs.ml  nat_defs.mli  range.ml  range.mli  shape.ml  shape.mli  signatures.ml  signatures.mli  small_matrix.ml  small_matrix.mli  small_tensor.ml  small_tensor.mli  small_unified.ml  small_unified.mli  small_vec.ml  small_vec.mli  stencil.ml  stencil.mli  stride.ml  stride.mli  tensor.ml  tensor.mli
pkg/: META  descr  pkg.ml  url
ppx/: .merlin  dune  ppx_tensority.ml  ppx_tensority_ex.ml
src/: hex_definitions.ml  hexadecimal.ml  ma.ml  multidim_array.ml  nat.ml  nat_defs.ml  shape.ml  signatures.ml  slices.ml  small_matrix.ml  small_matrix.mli  small_tensor.ml  small_tensor.mli  small_unified.ml  small_unified.mli  small_vec.ml  small_vec.mli  tensor.ml
